# OpenCiv

./: .coverage  .env.sample  .gitattributes  .gitignore  .gitmodules  .markdownling.json  .markdownlnt.json  .releaserc  CHANGELOG.md  CONTRIBUTE.md  README.md  TechTreeDump  actions.py  changelog.md.j2  config.json  coverage.json  coverage.xml  graphz_test.py  main.py  processor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tech_tree
hooks/: detect_debug_methods.py  future_annotations_fix.py  pre-commit.py  pre-commit.sh
meta/: roadmap.md  vision.md
meta/ideas/: terms.md
meta/ideas/combat/: stats.md
meta/ideas/gameplay/: age.md  yields.md
meta/ideas/tech/: ancient.md  classical.md  future.md  industrial.md  modern.md  post-modern.md
meta/ideas/world/: settings.md
meta/knowledge/: folder_structure.md
meta/versions/: 0.0.1-poc.md  0.1.0-pre-development.md  0.2.0-development.md  0.3.0-pre-alpha.md  0.4.0-alpha.md  0.5.0-beta.md  1.0.0-release.md  1.1.0-multiplayer.md
openciv/: condition.py  gossip.py  version.py
openciv/ai/: ai.py
openciv/engine/: ai.py  camera.py  entity.py  game.py  requires.py  saving.py  tile_layers.py  ui.py
openciv/engine/UI/: base.py  (+7 more)
openciv/gameplay/: _units.py  age.py  ages.py  alliance.py  bonus_resource.py  bonus_resources.py  border.py  building.py  cities.py  citizen.py  citizens.py  city.py  civilization.py  claim.py  claims.py  climate.py  conditions.py  culture.py  damage.py  diplomacy.py  disaster.py  disasters.py  dynamic_naming.py  effect.py  effects.py  electricity.py  empire.py  goal.py  goverment.py  great.py  greats.py  happiness.py  improvement.py  improvements.py  influence.py  item.py  leader.py  map.py  mood.py  moods.py  (+28 more)
openciv/i18n/: en_EN.json
templates/: CHANGELOG.md.j2
typings/graphviz/: __init__.pyi  _compat.pyi  _defaults.pyi  _tools.pyi  base.pyi  copying.pyi  dot.pyi  encoding.pyi  exceptions.pyi  graphs.pyi  jupyter_integration.pyi  piping.pyi  quoting.pyi  rendering.pyi  saving.pyi  sources.pyi  unflattening.pyi
typings/ursina/: __init__.pyi  application.pyi  audio.pyi  boxcast.pyi  build.pyi  camera.pyi  collider.pyi  color.pyi  curve.pyi  duplicate.pyi  entity.pyi  gamepad.pyi  hit_info.pyi  input_handler.pyi  lights.pyi  main.pyi  mesh.pyi  mesh_exporter.pyi  mesh_importer.pyi  mouse.pyi  networking.pyi  raycast.pyi  rigidbody.pyi  scene.pyi  sequence.pyi  shader.pyi  string_utilities.pyi  terraincast.pyi  text.pyi  texture.pyi  texture_importer.pyi  trigger.pyi  ursinamath.pyi  ursinastuff.pyi  vec2.pyi  vec3.pyi  vec4.pyi  window.pyi
typings/webcolors/: __init__.pyi  _conversion.pyi  _definitions.pyi  _html5.pyi  _normalization.pyi  _types.pyi
(+698 files in other folders)
